# libshade

./: .travis.yml  CMakeLists.txt  GitDescribe.cmake  README.md
cli/: client.cc  client.h  main.cc  menu.cc  menu.h
inc/shade/: cache.h  connection.h  discovery.h  heartbeat.h  http.h  hue_data.h  listener.h  manager.h  network.h  storage.h  tcp.h  udp.h  version.in.h
inc/shade/asio/: http.h  network.h
inc/shade/io/: connection.h  http.h  network.h
inc/shade/model/: base.h  bridge.h  group.h  host.h  light.h  light_source.h  updatable.h
playground/: main.cc
src/: cache.cc  connection.cc  discovery.cc  heartbeat.cc  internal.h  manager.cc  manager_internal.h  manager_linux.cc  manager_win.cc  storage.cc  storage_internal.h  storage_linux.cc  storage_win.cc
src/asio/: http.cc  network.cc
src/io/: connection.cc
src/model/: bridge.cc  group.cc  host.cc  json.h  light.cc  light_source.cc  updatable.cc
